...
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:title="新建账户"-->
<!--        app:titleCentered="true" />-->

    <EditText
        android:id="@+id/editView_account_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/editView_account_remarks" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="73dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
...
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="（选填）"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/editView_account_name" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="70dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
...
        android:id="@+id/editView_account_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <Button
        android:id="@+id/button_confirm_add_account"
        android:layout_width="394dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="保存"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

...
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="添加账户"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center" />

    </androidx.appcompat.widget.Toolbar>

...
