<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_item1" >

    <fragment
        android:id="@+id/navigation_item1"
        android:name="cn.edu.jnu.account.ui.DetailsFragment"
        android:label="@string/title_size"
        tools:layout="@layout/fragment_details" >
    </fragment>

    <fragment
        android:id="@+id/navigation_item2"
        android:name="cn.edu.jnu.account.ui.ChartFragment"
        android:label="@string/title_chart"
        tools:layout="@layout/fragment_chart" >
    </fragment>

    <fragment
        android:id="@+id/navigation_item3"
        android:name="cn.edu.jnu.account.ui.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" >
    </fragment>

    <fragment
        android:id="@+id/navigation_item4"
        android:name="cn.edu.jnu.account.ui.AccountFragment"
        android:label="账户"
        tools:layout="@layout/fragment_account" >
    </fragment>

    <fragment
        android:id="@+id/navigation_item5"
        android:name="cn.edu.jnu.account.ui.MineFragment"
        android:label="我的"
        tools:layout="@layout/fragment_mine" />
</navigation>

